--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="video_compress_example"
         android:icon="@mipmap/ic_launcher">
         <activity
+            android:exported="true"
             android:name="io.flutter.embedding.android.FlutterActivity"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
