--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 
     dependencies {
@@ -18,6 +19,7 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 }
 
@@ -40,5 +42,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.otaliastudios:transcoder:0.10.0'
+    implementation 'com.otaliastudios:transcoder:0.9.1'
 }
