--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()
+        maven { url "https://jitpack.io" }
     }
 
     dependencies {
@@ -19,7 +19,7 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -42,5 +42,6 @@ android {
 }
 
 dependencies {
-    implementation 'com.otaliastudios:transcoder:0.9.1'
+    implementation 'com.otaliastudios:transcoder:0.10.4'
+    //implementation 'com.github.Tom3652:AndroidTranscoder'
 }
