--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,6 +42,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.otaliastudios:transcoder:0.10.4'
+    //implementation 'com.github.jumperson:Transcoder'
+    //implementation 'com.otaliastudios:transcoder:0.10.4'
     //implementation 'com.github.Tom3652:AndroidTranscoder'
+    implementation files('./src/main/transcoder.aar')
 }
