--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,7 +45,7 @@ android {
 
 dependencies {
     //implementation 'com.github.jumperson:Transcoder'
-    //implementation 'com.otaliastudios:transcoder:0.10.4'
-    implementation 'com.github.Tom3652:Transcoder:v0.10.9'
+    implementation 'com.otaliastudios:transcoder:0.11.2'
+    // implementation 'com.github.Tom3652:Transcoder:v0.10.9'
     //implementation files('./src/main/transcoder.aar')
 }
