--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   path_provider:
 
 
+  gallery_saver:
+    git:
+      url: https://github.com/Tom3652/gallery_saver.git
 
 
 dev_dependencies:
